Disease Spread working
Without condom use or long term/one shot relationships, disease spread
is good.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,9 +77,9 @@ javafx.disable.concurrent.runs=false
 javafx.enable.concurrent.external.runs=false
 # This is a JavaFX project
 javafx.enabled=true
-javafx.fallback.class=com.javafx.main.NoJavaFXFallback
+javafx.fallback.class=hivMicroSim.HIVMicroSim
 # Main class for JavaFX
-javafx.main.class=simulation.Simulation
+javafx.main.class=hivMicroSim.HIVMicroSimGUI
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
