--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,6 +6,7 @@ do.jar=true
 endorsed.javafx.ant.classpath=.
 javac.debug=true
 javadoc.preview=true
+javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files (x86)\\Internet Explorer\\iexplore.exe
 user.properties.file=C:\\Users\\manuells\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
