Updates to relationships and logging
Corrected "ontop" for homosexual relationships, Enhanced logger,
Enhanced relationship to indicate relationship orientation F2F M2M,
hetero, since there are rare cases of F2F transmission.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 *.jpg
 *.png
 *.bmp
+*.pdf
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -69,3 +70,4 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+/dist/
