--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 *.odt
 *.jpg
 *.pdf
+*.Rhistory
+*.Rproj*
+build*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
